[package]
name = "mongo-import-rs"
version = "0.1.0"
authors = ["rubenrua <rubenrua@gmail.com>"]
edition = "2018"

[dependencies]
argparse = "0.2.2"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
lazy_static = "1.1.0"
log = "0.4.5"
nom = "4.0"
rayon = "1.0.2"
rusoto_core = { version="0.34.0", default_features=false, features=["rustls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
itertools = "0.8"

mongodb = "0.3.11"
bson = { version="0.13.0", features=["u2i"] }

[profile.release]
lto = true
